Bug 1030384 - Change a spammy NS_WARNING into a log message instead. r=khuey